--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,5 @@
 body {
     background-image: url('https://source.unsplash.com/qQUtvVdurHg');
     background-repeat: no-repeat;
-    background-size: auto 1200px;
+    background-size: auto 100vh;
 }
